# webhook-telegram-bot

./: .dockerignore  .gitignore  .readthedocs.yaml  Dockerfile  LICENSE  Makefile  README.rst  docker-compose.yml  gunicorn.conf.py  mypy.ini  pyproject.toml
.github/workflows/: ci.yaml  docker-image.yaml
docs/: requirements-docs.txt
docs/source/: conf.py  index.rst
docs/source/_templates/: layout.html
repository_telegram_bot/: config.py  exceptions.py  helpers.py  main.py  settings.py  utils.py
repository_telegram_bot/bitbucket/: handlers.py  routes.py  services.py
repository_telegram_bot/database/: exceptions.py  models.py
repository_telegram_bot/database/backends/: base.py  mongo.py  types.py
repository_telegram_bot/telegram/: constants.py  handlers.py  routes.py  telegram_api.py
repository_telegram_bot/telegram/commands/: __init__.py  add_bitbucket_repository.py  add_bitbucket_webhook.py  add_repository.py  add_webhook.py  delete_repository.py  delete_webhook.py  edit_repositories.py  edit_repository.py  edit_webhook.py  edit_webhooks.py  start.py
repository_telegram_bot/templates/: chat_not_found.html  edit_repositories.html  edit_repository.html  repository_deleted.html  select_service.html  start.html
repository_telegram_bot/templates/bitbucket/: base.html  branch_closed.html  branch_created.html  branch_updated.html  pull_request_event.html  unknown_event.html
tests/: conftest.py  test_handlers.py  test_helpers.py  test_main.py  test_utils.py
tests/database/: test_models.py
tests/database/backends/: test_mongo.py
tests/plugins/bitbucket/: test_services.py
tests/telegram/: test_handlers.py  test_telegram_api.py
tests/telegram/commands/: test_add_webhook.py  test_delete_webhook.py  test_edit_webhook.py  test_edit_webhooks.py  test_start.py  utils.py
webhook_telegram_bot/: config.py  exceptions.py  handlers.py  helpers.py  main.py  utils.py
webhook_telegram_bot/bitbucket/: constants.py  handlers.py  routes.py  services.py
webhook_telegram_bot/bitbucket/commands/: add_bitbucket_webhook.py
webhook_telegram_bot/database/: exceptions.py  models.py
webhook_telegram_bot/database/backends/: base.py  (+2 more)
webhook_telegram_bot/plugins/: base.py  types.py
webhook_telegram_bot/telegram/: constants.py  handlers.py  routes.py  telegram_api.py
webhook_telegram_bot/templates/: chat_not_found.html  start.html  webhook_deleted.html
(+23 files in other folders)
