[tool.poetry]
name = "webhook-telegram-bot"
version = "0.1.0"
description = ""
authors = ["Dmitrii Zakharov <dmitrii@zakharov.cc>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "3.8.1"
Jinja2 = "3.0.3"
first = "2.0.2"
motor = "2.5.1"
pydantic = "1.9.0"
types-first = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest-aiohttp = "0.3.0"
mypy = "0.930"
black = "21.5b1"
flake8 = "4.0.1"
isort = "5.10.1"
bandit = "1.7.1"
safety = "1.10.3"
pydocstyle = "6.1.1"
pytest-cov = "3.0.0"
radon = "5.1.0"

[tool.black]
skip-string-normalization = 1

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
