[tool.poetry]
name = "webhook-telegram-bot"
version = "1.1.0"
description = ""
authors = ["Dmitrii Zakharov <dmitrii@zakharov.cc>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "3.8.1"
Jinja2 = "3.0.3"
first = "2.0.2"
motor = "2.5.1"
pydantic = "1.9.0"

[tool.poetry.dev-dependencies]
pytest-aiohttp = "1.0.4"
mypy = "0.931"
black = "22.3.0"
coveralls = "3.3.1"
flake8 = "4.0.1"
isort = "5.10.1"
bandit = "1.7.4"
safety = "1.10.3"
pydocstyle = "6.1.1"
pytest-cov = "3.0.0"
radon = "5.1.0"
Sphinx = "4.4.0"
sphinx-rtd-theme = "1.0.0"
sphinx-autoapi = "1.8.4"
types-first = "2.0.2"

[tool.black]
skip-string-normalization = 1

[tool.isort]
profile = "black"

[tool.mypy]
strict = "true"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
